--- a/.github/workflows/sigre-build.yml
+++ b/.github/workflows/sigre-build.yml
@@ -34,6 +34,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./apps/sigre/Dockerfile  # Dockerfileのパスを指定
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
